# taskchampion-jni

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  build.gradle  flake.nix  gradle.properties  gradlew  jitpack.yml  settings.gradle  setup-git-hooks.sh
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: rust-jni-expert.md  taskwarrior-expert.md
.githooks/: pre-commit
.github/workflows/: build.yml  release.yml  simple-release.yml  test.yml
specs/: taskchampion-jni.allium
src/: jni_bindings.rs  lib.rs  logging.rs
src/main/: AndroidManifest.xml
src/main/java/com/tasksquire/data/storage/: InvalidReplicaException.java  InvalidStatusException.java  InvalidTagException.java  InvalidUuidException.java  ReplicaInitializationException.java  SyncException.java  TaskChampionException.java  TaskChampionJniImpl.java  TaskChampionStorageException.java
