[package]
name = "taskchampion-jni"
version = "0.1.11-alpha"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
android_logger = "0.13"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
taskchampion = { version = "2.0.2", default-features = false, features = ["bundled", "sync", "server-gcp", "server-aws", "cloud", "encryption"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "fs"] }
dashmap = "6.0"
lazy_static = "1.5"
webpki-roots = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-native-certs = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3.0"
